--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .wrapper {
+  border: 1px solid black;
   width: 60%;
   height: 90vh;
   margin: 0 auto;
@@ -13,14 +14,14 @@
 }
 
 .ball {
-  width: 200px;
-  height: 200px;
+  width: 220px;
+  height: 220px;
   background: #345;
   border-radius: 50%;
 }
 
 .changing {
-  font-size: 45px;
+  font-size: 30px;
 }
 
 .changing-correct {
